@@ -1,4 +1,4 @@
-Highlight version 2.1.1
+Highlight version 2.1.2
 =======================
 
 INSTALLATION
